--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>machu.fun</title>
+  <link rel="icon" href="logo.png">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/javascript.js"></script>
 </head>
