--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="https://www.instagram.com/ttmachuuu/" target="_blank">
         <img class="instagramlogo" src="img/instagram.png" alt="logo de instagram" />
       </a>
-      <a href="https://twitter.com/noodatmachu" target="_blank">
+      <a href="https://twitter.com/machusdr" target="_blank">
         <img class="twitterlogo" src="img/twitter.png" alt="logo de twitter" />
       </a>
       <a href="https://www.tiktok.com/@l9.0005l" target="_blank">
