--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="https://twitter.com/machusdr" target="_blank">
         <img class="twitterlogo" src="img/twitter.png" alt="logo de twitter" />
       </a>
-      <a href="https://www.tiktok.com/@l9.0005l" target="_blank">
+      <a href="https://www.tiktok.com/@ttmachuuu" target="_blank">
         <img class="tiktoklogo" src="img/tiktok.png" alt="logo de tiktok" />
       </a>
       <a href="https://www.youtube.com/channel/UCPq_3cCsgusLMSxuM7W3v3A" target="_blank">
